// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should match snapshot with default Card 1`] = `
<DocumentFragment>
  <div
    class="styles__Container-sc-173llyf-0 eAfLlQ"
  >
    <div
      class="styles__Profile-sc-173llyf-2 gTWmfi"
    >
      <div
        class="styles__ContainerAvatar-sc-2niw0e-0"
      >
        <figure>
          <img
            class="styles__User-sc-2niw0e-1 eqmrgD"
            src="/"
          />
        </figure>
      </div>
      <div
        class="styles__About-sc-173llyf-1 bWkefv"
      >
        <p
          class="styles__Text-sc-tpjft1-0 byLudI"
          color="black"
        />
        <div
          class="styles__ContainerInfo-sc-ks18od-0"
        >
          <div
            class="styles__Info-sc-ks18od-1 gZmPJP"
          >
            <p
              class="styles__Text-sc-tpjft1-0 llQDMz"
              color="black"
            />
            <p
              class="styles__Text-sc-tpjft1-0 ghGUWi"
              color="purple"
            >
              - 
            </p>
          </div>
        </div>
        <div
          class="styles__ContainerRating-sc-1gutum1-0"
        >
          <div
            class="styles__Stars-sc-1gutum1-1 LQptv"
          >
            <div
              class="react-stars-wrapper-06548627177731192"
              style="display: flex;"
            >
              <div
                aria-label="add rating by typing an integer from 0 to 5 or pressing arrow keys"
                class="undefined react-stars"
                style="overflow: hidden; position: relative;"
                tabindex="0"
              >
                <span
                  class=""
                  data-forhalf="★"
                  data-index="0"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <p
                  role="status"
                  style="position: absolute; left: -200rem;"
                >
                  0
                </p>
              </div>
            </div>
            <p
              class="styles__Text-sc-tpjft1-0 jSpzPB"
              color="text"
            >
              (0)
            </p>
          </div>
        </div>
        <div
          class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
        >
          <p
            class="styles__Text-sc-tpjft1-0 eFfUut"
            color="text"
          >
            0
          </p>
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          >
             / 50 minutos
          </p>
        </div>
      </div>
    </div>
    <div
      class="styles__ContainerDescription-sc-1j7k9k3-0 eveMRK"
    >
      <p
        class="styles__Text-sc-tpjft1-0 jGCNOp"
        color="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card tests should match snapshot with default Card with searchFreelance 1`] = `
<DocumentFragment>
  <div
    class="styles__Container-sc-173llyf-0 eAfLlQ"
  >
    <div
      class="styles__Profile-sc-173llyf-2 gTWmfi"
    >
      <div
        class="styles__ContainerAvatar-sc-2niw0e-0"
      >
        <figure>
          <img
            class="styles__User-sc-2niw0e-1 eqmrgD"
            src="http:img.com"
          />
        </figure>
      </div>
      <div
        class="styles__About-sc-173llyf-1 bWkefv"
      >
        <p
          class="styles__Text-sc-tpjft1-0 byLudI"
          color="black"
        >
          test
        </p>
        <div
          class="styles__ContainerInfo-sc-ks18od-0"
        >
          <div
            class="styles__Info-sc-ks18od-1 gZmPJP"
          >
            <p
              class="styles__Text-sc-tpjft1-0 llQDMz"
              color="black"
            >
              coach
            </p>
            <p
              class="styles__Text-sc-tpjft1-0 ghGUWi"
              color="purple"
            >
              - now
            </p>
          </div>
        </div>
        <div
          class="styles__ContainerRating-sc-1gutum1-0"
        >
          <div
            class="styles__Stars-sc-1gutum1-1 LQptv"
          >
            <div
              class="react-stars-wrapper-028487246217964746"
              style="display: flex;"
            >
              <div
                aria-label="add rating by typing an integer from 0 to 5 or pressing arrow keys"
                class="undefined react-stars"
                style="overflow: hidden; position: relative;"
                tabindex="0"
              >
                <span
                  class=""
                  data-forhalf="★"
                  data-index="0"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <span
                  class=""
                  data-forhalf="★"
                  data-index="1"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <span
                  class=""
                  data-forhalf="★"
                  data-index="2"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <span
                  class=""
                  data-forhalf="★"
                  data-index="3"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <span
                  class=""
                  data-forhalf="★"
                  data-index="4"
                  style="position: relative; overflow: hidden; cursor: pointer; display: block; float: left; color: gray; font-size: 24px;"
                >
                  ★
                </span>
                <p
                  role="status"
                  style="position: absolute; left: -200rem;"
                >
                  0
                </p>
              </div>
            </div>
            <p
              class="styles__Text-sc-tpjft1-0 jSpzPB"
              color="text"
            >
              (2 comments)
            </p>
          </div>
        </div>
        <div
          class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
        >
          <p
            class="styles__Text-sc-tpjft1-0 eFfUut"
            color="text"
          >
            100
          </p>
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          >
             / 50 minutos
          </p>
        </div>
      </div>
    </div>
    <div
      class="styles__ContainerDescription-sc-1j7k9k3-0 eveMRK"
    >
      <p
        class="styles__Text-sc-tpjft1-0 jGCNOp"
        color="text"
      />
    </div>
  </div>
</DocumentFragment>
`;
